сверстал десктоп-версию

--- a/index.html
+++ b/index.html
@@ -1,13 +1,281 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Narrative BI</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Narrative BI</title>
+		<link rel="stylesheet" href="./assets/css/style.css" />
+	</head>
+	<body>
+		<header class="header">
+			<a href="#" class="header__logo-link"><img src="./assets/img/logo.png" alt="" /></a>
+
+			<div class="header__nav">
+				<ul class="header__nav-list">
+					<li class="header__nav-item"><a class="header__nav-link" href="#">Product</a></li>
+					<li class="header__nav-item"><a class="header__nav-link" href="#">Why Narrative BI?</a></li>
+					<li class="header__nav-item"><a class="header__nav-link" href="#">About</a></li>
+				</ul>
+				<a href="#" class="button header__btn">Get a Demo</a>
+			</div>
+		</header>
+
+		<!-- HOME -->
+		<section class="section home">
+			<div class="home__inner bd-grid">
+				<div class="home__content">
+					<h1 class="home__heading">Meaningful Insights Without the Click of a Button.</h1>
+
+					<p class="home__description">
+						Narrative BI is a new user-friendly tool that uses proprietary anomaly detection technology to bring meaningful
+						insights to the user without a single click.
+					</p>
+
+					<form class="form">
+						<input class="form__text" type="text" placeholder="Enter your work email address" />
+						<input class="form__submit button" type="button" value="Get a Demo" />
+					</form>
+				</div>
+
+				<div class="home__img">
+					<img class="home__img-item" src="./assets/img/home-bg.png" alt="" />
+				</div>
+			</div>
+		</section>
+
+		<!-- DATA -->
+		<section class="section data">
+			<div class="data__inner bd-grid">
+				<h2 class="data__title section-title">Narrative BI creates a unique way for users to interact with their Data.</h2>
+				<p class="data__subtitle section-subtitle">
+					Users can intuitively pull data from multiple data sources, discover hidden trends, and share insights with your team.
+				</p>
+				<a class="data__link" href="#">See how it works</a>
+
+				<div class="data__img-wrapper">
+					<img class="data__img" src="./assets/img/data-img.jpg" alt="User data" />
+					<img class="data__eye-icon conical-eye" src="./assets/img/conical-eye.png" alt="" />
+				</div>
+			</div>
+		</section>
+
+		<!-- INSIGHTS -->
+		<section class="section insights">
+			<div class="insights__inner bd-grid">
+				<h2 class="insights__title section-title">Within your data lies a story, let Narrative BI tell it.</h2>
+
+				<p class="insights__subtitle section-subtitle">
+					With our secure and user-friendly solution, your company can easily explore a massive amount of data and get meaningful
+					insights from that data in seconds.
+				</p>
+
+				<div class="insights__cards">
+					<div class="insights__card insights__card-1">
+						<h3 class="insights__card-title title--min">Personalized Anomaly Detection</h3>
+
+						<p class="insights__card-desc">
+							Narrative BI’s proprietary outlier-detection algorithm removes human bias and brings hidden insights that can be
+							missed by traditional BI tools and data analysts.
+						</p>
+
+						<p class="insights__card-desc">
+							Narrative BI delivers personalized insights to the user regardless of their group, title, or challenge.
+						</p>
+
+						<img src="./assets/img/card-1.png" alt="" class="insights__card-img card-1-img" />
+					</div>
+
+					<div class="insights__card insights__card-2">
+						<img class="insights__card-img card-2-img" src="/./assets/img/card-2.png" alt="" />
+
+						<h3 class="insights__card-title">Make Quicker Decisions</h3>
+
+						<p class="insights__card-desc">
+							Narrative BI users receive meaningful insights that lead to faster data-driven decisions.
+						</p>
+
+						<p class="insights__card-desc">
+							By automating insights, users are empowered to drive the business forward without asking specialists to perform
+							ad-hoc queries which slows them down.
+						</p>
+					</div>
+
+					<div class="insights__card insights__card-3">
+						<h3 class="insights__card-title">Data Narratives</h3>
+
+						<p class="insights__card-desc">Narrative BI uses a linear approach to package insights for its users.</p>
+
+						<p class="insights__card-desc">
+							Similar to social media feeds, users will receive meaningful insights that can be pinned and shared with the
+							team using simple functionality.
+						</p>
+
+						<img src="./assets/img/card-3.png" alt="" class="insights__card-img card-3-img" />
+					</div>
+
+					<div class="insights__card insights__card-4">
+						<h3 class="insights__card-title">Eliminate Dependencies</h3>
+
+						<p class="insights__card-desc">
+							Leadership, Marketing, Sales, Finance, and other non-technical areas of a business often struggle with the time
+							it takes to gain insight from their data.
+						</p>
+
+						<p class="insights__card-desc">
+							Narrative BI’s simple interface allows non-technical users to gain insights on their own eliminating
+							dependencies on the data team within the organization.
+						</p>
+
+						<img src="./assets/img/card-4.png" alt="" class="insights__card-img card-4-img" />
+					</div>
+
+					<img class="insights__eye-icon conical-eye" src="./assets/img/conical-eye.png" alt="" />
+				</div>
+			</div>
+		</section>
+
+		<!-- ADVANTAGES -->
+		<section class="section advantages">
+			<div class="advantages__inner bd-grid">
+				<h2 class="advantages__title section-title">What makes Narrative BI so unique?</h2>
+
+				<p class="advantages__subtitle section-subtitle">
+					Popular tools on the market either require specialized skills to make you or your team members work for deep unbiased
+					analytical insights, while Narrative BI brings them right to you.
+				</p>
+
+				<div class="advantages__content">
+					<div class="advantages__item">
+						<div class="advantages__item-icon">
+							<img src="./assets/img/icons/arrow.svg" alt="" />
+						</div>
+
+						<div class="advantages__item-text">
+							<h3 class="advantages__item-title">Predictive Insights</h3>
+
+							<p class="advantages__item-desc">
+								Using anomaly detection, Narrative BI’s proprietary algorithms generate meaningful insights for the user
+								without the click of a button. Narrative BI uses time-series analysis to discover key trends from historical
+								data to predict future outcomes.
+							</p>
+						</div>
+					</div>
+
+					<div class="advantages__item">
+						<div class="advantages__item-icon">
+							<img src="./assets/img/icons/pencil.svg" alt="" />
+						</div>
+
+						<div class="advantages__item-text">
+							<h3 class="advantages__item-title">Natural Language Processing</h3>
+
+							<p class="advantages__item-desc">
+								Narrative BI speaks your language. Through our patent-pending Natural Language Generation Engine, users can
+								receive insights described in plain English.
+							</p>
+						</div>
+					</div>
+
+					<div class="advantages__item">
+						<div class="advantages__item-icon">
+							<img src="./assets/img/icons/heart.svg" alt="" />
+						</div>
+
+						<div class="advantages__item-text">
+							<h3 class="advantages__item-title">Social Media Inspired User Interface</h3>
+
+							<p class="advantages__item-desc">
+								Narrative BI’s UI has a feel to social media platforms where users can easily discover insights and share
+								what they find with the community. Users stay informed, can share insights with the team and get their
+								questions answered without the hassle of learning a new tool. Narrative BI has created a fun platform that
+								people like to use.
+							</p>
+						</div>
+					</div>
+
+					<div class="advantages__item">
+						<div class="advantages__item-icon">
+							<img src="./assets/img/icons/reply-arrow.svg" alt="" />
+						</div>
+
+						<div class="advantages__item-text">
+							<h3 class="advantages__item-title">Collaboration & Reporting</h3>
+
+							<p class="advantages__item-desc">
+								Drag & drop insights to share with team members, other tools or emails are no longer needed to share
+								knowledge. Marketing, leadership, sales, and other non-technical teams can now pin key insights on the
+								company landing page, share projects, and create custom reports without going to the IT side of the
+								business.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- ABOUT -->
+		<section class="section about">
+			<div class="about__inner bd-grid">
+				<h2 class="about__title section-title">Sharp. Nimble. Personal.</h2>
+
+				<p class="about__text">
+					The Narrative BI team was founded by a diverse group of tech entrepreneurs from across the globe including California,
+					New York, and Europe.
+				</p>
+
+				<p class="about__text">
+					We have founded successful startups that have been acquired by S&P 500 companies. Our team has experience deploying
+					modern SaaS solutions on an enterprise level to the largest companies in the world.
+				</p>
+
+				<p class="about__text">
+					We believe in a personal touch, with flexibility to handle any use-case or challenge your business presents to us. Our
+					goal is to win your business through an effortless approach to BI with a personal touch.
+				</p>
+
+				<p class="about__text about__slogan">At Narrative BI, we put our product, clients and culture first.</p>
+
+				<img class="about__eye-icon conical-eye" src="./assets/img/conical-eye.png" alt="" />
+			</div>
+		</section>
+
+		<footer class="footer">
+			<div class="footer__inner bd-grid">
+				<div class="subscribe">
+					<h2 class="subscribe__title">Would you like to see Narrative BI in action?</h2>
+
+					<p class="subscribe__text">
+						Leave your email address to discuss how your company can get first actionable insights today
+					</p>
+
+					<form class="form subscribe__form">
+						<input class="form__text" type="text" placeholder="Enter your work email address" />
+						<input class="form__submit button" type="button" value="Get a Demo" />
+					</form>
+				</div>
+
+				<div class="footer__nav">
+					<a href="#" class="footer__logo-link"><img src="./assets/img/logo-footer.png" alt="" /></a>
+
+					<div class="footer__links">
+						<a class="footer__link" href="#">Linkedin</a>
+						<a class="footer__link" href="#">Twitter</a>
+					</div>
+				</div>
+
+				<div class="footer__copy">
+					<div class="footer__copy-text">© 2020 Narrative BI, Inc.</div>
+					<div class="footer__copy-text">Terms & Privacy</div>
+				</div>
+
+				<div class="footer__separator"></div>
+				
+				<div class="footer__slogan">
+					<div class="footer__slogan-text">Within your data lies a story, let Narrative BI tell it.</div>
+					<a href="#" class="button">Get a Demo</a>
+				</div>
+			</div>
+		</footer>
+	</body>
 </html>
